@@ -1,53 +1,52 @@
 package it.pagopa.pn.delivery.svc;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
-
-import java.time.Instant;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-
+import it.pagopa.pn.delivery.PnDeliveryConfigs;
 import it.pagopa.pn.delivery.generated.openapi.msclient.datavault.v1.model.BaseRecipientDto;
-import it.pagopa.pn.delivery.generated.openapi.msclient.datavault.v1.model.NotificationRecipientAddressesDto;
-import it.pagopa.pn.delivery.generated.openapi.server.v1.dto.*;
-import org.apache.commons.codec.digest.DigestUtils;
+import it.pagopa.pn.delivery.generated.openapi.server.v1.dto.NotificationDigitalAddress;
+import it.pagopa.pn.delivery.generated.openapi.server.v1.dto.NotificationFeePolicy;
+import it.pagopa.pn.delivery.generated.openapi.server.v1.dto.NotificationStatus;
+import it.pagopa.pn.delivery.middleware.NotificationDao;
+import it.pagopa.pn.delivery.middleware.notificationdao.EntityToDtoNotificationMapper;
+import it.pagopa.pn.delivery.middleware.notificationdao.NotificationDaoDynamo;
+import it.pagopa.pn.delivery.middleware.notificationdao.NotificationEntityDao;
+import it.pagopa.pn.delivery.middleware.notificationdao.entities.DocumentAttachmentEntity;
+import it.pagopa.pn.delivery.middleware.notificationdao.entities.NotificationAttachmentBodyRefEntity;
+import it.pagopa.pn.delivery.middleware.notificationdao.entities.NotificationAttachmentDigestsEntity;
+import it.pagopa.pn.delivery.middleware.notificationdao.entities.NotificationEntity;
+import it.pagopa.pn.delivery.models.InternalNotification;
+import it.pagopa.pn.delivery.models.internal.notification.NotificationAttachmentBodyRef;
+import it.pagopa.pn.delivery.models.internal.notification.NotificationAttachmentDigests;
+import it.pagopa.pn.delivery.models.internal.notification.NotificationDocument;
+import it.pagopa.pn.delivery.models.internal.notification.NotificationRecipient;
+import it.pagopa.pn.delivery.pnclient.datavault.PnDataVaultClientImpl;
+import it.pagopa.pn.delivery.rest.PnReceivedNotificationsController;
+import it.pagopa.pn.delivery.rest.PnSentNotificationsController;
+import it.pagopa.pn.delivery.svc.search.NotificationRetrieverService;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import org.modelmapper.ModelMapper;
 import org.springframework.boot.test.autoconfigure.web.reactive.WebFluxTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-
-import it.pagopa.pn.delivery.PnDeliveryConfigs;
-import it.pagopa.pn.delivery.middleware.NotificationDao;
-import it.pagopa.pn.delivery.middleware.notificationdao.EntityToDtoNotificationMapper;
-import it.pagopa.pn.delivery.middleware.notificationdao.NotificationDaoDynamo;
-import it.pagopa.pn.delivery.middleware.notificationdao.NotificationEntityDao;
-import it.pagopa.pn.delivery.middleware.notificationdao.entities.NotificationEntity;
-import it.pagopa.pn.delivery.models.InternalNotification;
-import it.pagopa.pn.delivery.pnclient.datavault.PnDataVaultClientImpl;
-import it.pagopa.pn.delivery.rest.PnReceivedNotificationsController;
-import it.pagopa.pn.delivery.rest.PnSentNotificationsController;
-import it.pagopa.pn.delivery.svc.search.NotificationRetrieverService;
 import org.springframework.boot.test.mock.mockito.SpyBean;
 import software.amazon.awssdk.enhanced.dynamodb.Key;
+
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 @WebFluxTest(controllers = {PnSentNotificationsController.class, PnReceivedNotificationsController.class})
 class ReceivedNotificationsDocumentTest {
 
 	private static final String IUN = "IUN";
 	private static final String PA_ID = "PA_ID";
-	private static final String X_PAGOPA_PN_SRC_CH = "sourceChannel";
 	private static final int DOCUMENT_INDEX = 0;
 	private static final String PA_PROTOCOL_NUMBER = "paProtocolNumber";
-	private static final String REDIRECT_URL = "http://redirectUrl";
-	public static final String ATTACHMENT_BODY_STR = "Body";
-	public static final String SHA256_BODY = DigestUtils.sha256Hex(ATTACHMENT_BODY_STR);
-	private static final String FILENAME = "filename.pdf";
 	private static final String REQUEST_ID = "VkdLVi1VS0hOLVZJQ0otMjAyMjA1LVAtMQ==";
 	private static final Integer AMOUNT = 10000;
 	private static final String PAYMENT_EXPIRE_DATE = "2023-12-29";
@@ -96,15 +95,15 @@ class ReceivedNotificationsDocumentTest {
 		Mockito.when( entity2DtoMapper.entity2Dto(Mockito.any(NotificationEntity.class))).thenReturn(notifications);
 
 		Mockito.when( pnDataVaultClient.getRecipientDenominationByInternalId(Mockito.anyList())).thenReturn(createBaseRecipientDto());
-		Mockito.when( pnDataVaultClient.getNotificationAddressesByIun(Mockito.anyString())).thenReturn(new ArrayList<NotificationRecipientAddressesDto>());
+		Mockito.when( pnDataVaultClient.getNotificationAddressesByIun(Mockito.anyString())).thenReturn(new ArrayList<>());
 
 		Optional<InternalNotification> results = notificationDao.getNotificationByIun(Mockito.anyString());
 
 		// Then
 
-		List<NotificationDocument> documents = results.get().getDocuments();
-		for (Integer i=0; i<documents.size(); i++) {
-			assertEquals(documents.get(i).getDocIdx(), i.toString());			
+		List<it.pagopa.pn.delivery.models.internal.notification.NotificationDocument> documents = results.get().getDocuments();
+		for (int i = 0; i<documents.size(); i++) {
+			assertEquals(documents.get(i).getDocIdx(), Integer.toString(i));
 		}
 	}
 
@@ -118,39 +117,45 @@ class ReceivedNotificationsDocumentTest {
 		Mockito.when( entity2DtoMapper.entity2Dto(Mockito.any(NotificationEntity.class))).thenReturn(notifications);
 
 		Mockito.when( pnDataVaultClient.getRecipientDenominationByInternalId(Mockito.anyList())).thenReturn(createBaseRecipientDto());
-		Mockito.when( pnDataVaultClient.getNotificationAddressesByIun(Mockito.anyString())).thenReturn(new ArrayList<NotificationRecipientAddressesDto>());
+		Mockito.when( pnDataVaultClient.getNotificationAddressesByIun(Mockito.anyString())).thenReturn(new ArrayList<>());
 
 		Optional<InternalNotification> results = notificationDao.getNotificationByIun(Mockito.anyString());
 
 		// Then
 
-		List<NotificationDocument> documents = results.get().getDocuments();
-		assertEquals(documents.get(DOCUMENT_INDEX).getDocIdx(), DOCUMENT_INDEX+"");			
+		List<it.pagopa.pn.delivery.models.internal.notification.NotificationDocument> documents = results.get().getDocuments();
+		assertEquals(documents.get(DOCUMENT_INDEX).getDocIdx(), DOCUMENT_INDEX+"");
 	}
 
 	@Test
-	@Disabled("Documents field is required")
 	void getReceivedNotificationNoDocumentIndex() {
 		// When
 		InternalNotification notifications = createNoDocumentsNotification();
+		notifications.setDocuments(List.of(
+				NotificationDocument.builder()
+						.docIdx("docIx")
+						.contentType("application/pdf")
+						.title("title")
+						.build()
+		));
 		Optional<NotificationEntity> notificationEntities = createNotificationEntities();
 
 		Mockito.when( entityDao.get(Mockito.any(Key.class))).thenReturn(notificationEntities);
 		Mockito.when( entity2DtoMapper.entity2Dto(Mockito.any(NotificationEntity.class))).thenReturn(notifications);
 
 		Mockito.when( pnDataVaultClient.getRecipientDenominationByInternalId(Mockito.anyList())).thenReturn(createBaseRecipientDto());
-		Mockito.when( pnDataVaultClient.getNotificationAddressesByIun(Mockito.anyString())).thenReturn(new ArrayList<NotificationRecipientAddressesDto>());
+		Mockito.when( pnDataVaultClient.getNotificationAddressesByIun(Mockito.anyString())).thenReturn(new ArrayList<>());
 
 		Optional<InternalNotification> results = notificationDao.getNotificationByIun(Mockito.anyString());
 
 		// Then
-		List<NotificationDocument> documents = results.get().getDocuments();
-		assertNull(documents);
+		List<it.pagopa.pn.delivery.models.internal.notification.NotificationDocument> documents = results.get().getDocuments();
+		assertNotNull(documents);
 	}
 
 
 	private List<BaseRecipientDto> createBaseRecipientDto() {
-		ArrayList<BaseRecipientDto> result = new ArrayList<BaseRecipientDto>();
+		ArrayList<BaseRecipientDto> result = new ArrayList<>();
 		BaseRecipientDto brd = new BaseRecipientDto();
 		brd.setDenomination("test");
 		result.add(brd);
@@ -169,84 +174,64 @@ class ReceivedNotificationsDocumentTest {
 				.paymentExpirationDate( PAYMENT_EXPIRE_DATE )
 				.senderPaId( PA_ID )
 				.amount( AMOUNT )
+				.documents(List.of(DocumentAttachmentEntity.builder()
+						.contentType("application/pdf")
+						.digests(NotificationAttachmentDigestsEntity.builder()
+								.sha256("Zsg9Nyzj13UPzkyaQlnA7wbgTfBaZmH02OVyiRjpydE=").build())
+						.ref(NotificationAttachmentBodyRefEntity.builder().key("KEY").versionToken("version").build())
+						.build()))
 				.build(); //new NotificationEntity(IUN, ABSTRACT, IDEMPOTENCE_TOKEN, PA_PROTOCOL_NUMBER , null, IUN, IUN, PA_ID, null, null, null, null, IUN, FILENAME, ATTACHMENT_BODY_STR, AMOUNT, PAYMENT_EXPIRE_DATE, REQUEST_ID);
-		Optional<NotificationEntity> result = Optional.ofNullable(ne);
-		return result;
+		return Optional.ofNullable(ne);
 	}
 
 	private InternalNotification createDocumentsNotification() {
-		return new InternalNotification(FullSentNotificationV20.builder()
-				.iun("IUN_DOCUMENT_01")
-				.subject("Subject 01")
-				.senderPaId( "pa_03" )
-				.sourceChannel(X_PAGOPA_PN_SRC_CH)
-				.notificationStatus( NotificationStatus.ACCEPTED )
-				.recipients( Collections.singletonList(
-						NotificationRecipient.builder()
+		InternalNotification internalNotification = new InternalNotification();
+		internalNotification.setIun("iun");
+		internalNotification.setPaProtocolNumber("protocol_01");
+		internalNotification.setSubject("Subject 01");
+		internalNotification.setCancelledIun("IUN_05");
+		internalNotification.setCancelledIun("IUN_00");
+		internalNotification.setSenderPaId("PA_ID");
+		internalNotification.setNotificationStatus(NotificationStatus.IN_VALIDATION);
+		internalNotification.setDocuments(List.of(NotificationDocument.builder()
+				.docIdx("doc")
+				.title("title")
+				.contentType("application/pdf")
+				.digests(NotificationAttachmentDigests.builder()
+						.sha256("Zsg9Nyzj13UPzkyaQlnA7wbgTfBaZmH02OVyiRjpydE=").build())
+				.ref(NotificationAttachmentBodyRef.builder().key("key").versionToken("version").build())
+				.build()));
+		internalNotification.setRecipients(Collections.singletonList(
+				NotificationRecipient.builder()
 						.taxId("Codice Fiscale 01")
-						.denomination("Denomination_TEST")
-						.digitalDomicile(NotificationDigitalAddress.builder()
+						.denomination("Nome Cognome/Ragione Sociale")
+						.internalId( "recipientInternalId" )
+						.digitalDomicile(it.pagopa.pn.delivery.models.internal.notification.NotificationDigitalAddress.builder()
 								.type( NotificationDigitalAddress.TypeEnum.PEC )
 								.address("account@dominio.it")
-								.build())
-						.build()
-						))
-				.documents(Arrays.asList(
-						NotificationDocument.builder()
-						.ref( NotificationAttachmentBodyRef.builder()
-								.key("doc00")
-								.versionToken("v01_doc00")
-								.build()
-								)
-						.digests(NotificationAttachmentDigests.builder()
-								.sha256("sha256_doc00")
-								.build()
-								)
-						.build(),
-						NotificationDocument.builder()
-						.ref( NotificationAttachmentBodyRef.builder()
-								.key("doc01")
-								.versionToken("v01_doc01")
-								.build()
-								)
-						.digests(NotificationAttachmentDigests.builder()
-								.sha256("sha256_doc01")
-								.build()
-								)
-						.build(),
-						NotificationDocument.builder()
-						.ref( NotificationAttachmentBodyRef.builder()
-								.key("doc02")
-								.versionToken("v01_doc02")
-								.build()
-								)
-						.digests(NotificationAttachmentDigests.builder()
-								.sha256("sha256_doc01")
-								.build()
-								)
-						.build()
-						))
-				.build());
+								.build()).build()));
+		return internalNotification;
 	}
 
 	private InternalNotification createNoDocumentsNotification() {
-		return new InternalNotification(FullSentNotificationV20.builder()
-				.sourceChannel(X_PAGOPA_PN_SRC_CH)
-				.iun("IUN_DOCUMENT_01")
-				.subject("Subject 01")
-				.senderPaId( "pa_03" )
-				.notificationStatus( NotificationStatus.ACCEPTED )
-				.recipients( Collections.singletonList(
-						NotificationRecipient.builder()
+		InternalNotification internalNotification = new InternalNotification();
+		internalNotification.setIun("iun");
+		internalNotification.setPaProtocolNumber("protocol_01");
+		internalNotification.setSubject("Subject 01");
+		internalNotification.setCancelledIun("IUN_05");
+		internalNotification.setCancelledIun("IUN_00");
+		internalNotification.setSenderPaId("PA_ID");
+		internalNotification.setNotificationStatus(NotificationStatus.IN_VALIDATION);
+		internalNotification.setRecipients(Collections.singletonList(
+				NotificationRecipient.builder()
 						.taxId("Codice Fiscale 01")
-						.denomination("Denomination_TEST")
-						.digitalDomicile(NotificationDigitalAddress.builder()
+						.denomination("Nome Cognome/Ragione Sociale")
+						.internalId( "recipientInternalId" )
+						.digitalDomicile(it.pagopa.pn.delivery.models.internal.notification.NotificationDigitalAddress.builder()
 								.type( NotificationDigitalAddress.TypeEnum.PEC )
 								.address("account@dominio.it")
-								.build())
-						.build()
-						))
-				.build());
+								.build()).build()));
+		return internalNotification;
 	}
 
 }
